src/test/ui/borrowck/issue-54499-field-mutation-of-moved-out-with-mut.ast.stderr
error[E0382]: use of moved value: `t.0`
  --> $DIR/issue-54499-field-mutation-of-moved-out-with-mut.rs:25:31
   |
LL |         drop(t);
   |              - value moved here
...
LL |         println!("{:?} {:?}", t.0, t.1);
   |                               ^^^ value used here after move
   |
   = note: move occurs because `t` has type `(S, i32)`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `t.1`
  --> $DIR/issue-54499-field-mutation-of-moved-out-with-mut.rs:25:36
   |
LL |         drop(t);
   |              - value moved here
...
LL |         println!("{:?} {:?}", t.0, t.1);
   |                                    ^^^ value used here after move
   |
   = note: move occurs because `t` has type `(S, i32)`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `u.0`
  --> $DIR/issue-54499-field-mutation-of-moved-out-with-mut.rs:33:31
   |
LL |         drop(u);
   |              - value moved here
...
LL |         println!("{:?} {:?}", u.0, u.1);
   |                               ^^^ value used here after move
   |
   = note: move occurs because `u` has type `Tpair`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `u.1`
  --> $DIR/issue-54499-field-mutation-of-moved-out-with-mut.rs:33:36
   |
LL |         drop(u);
   |              - value moved here
...
LL |         println!("{:?} {:?}", u.0, u.1);
   |                                    ^^^ value used here after move
   |
   = note: move occurs because `u` has type `Tpair`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `v.x`
  --> $DIR/issue-54499-field-mutation-of-moved-out-with-mut.rs:41:31
   |
LL |         drop(v);
   |              - value moved here
...
LL |         println!("{:?} {:?}", v.x, v.y);
   |                               ^^^ value used here after move
   |
   = note: move occurs because `v` has type `Spair`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `v.y`
  --> $DIR/issue-54499-field-mutation-of-moved-out-with-mut.rs:41:36
   |
LL |         drop(v);
   |              - value moved here
...
LL |         println!("{:?} {:?}", v.x, v.y);
   |                                    ^^^ value used here after move
   |
   = note: move occurs because `v` has type `Spair`, which does not implement the `Copy` trait

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0382`.
